log
Fri 29 Mar 2024 12:01:07 AM UTC: 
 tests:  0|6
total_score: 0/70
3444074
Fri 29 Mar 2024 12:07:44 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0e55949
Fri 29 Mar 2024 12:08:04 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d419587
Fri 29 Mar 2024 12:10:44 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
b03a787
Fri 29 Mar 2024 12:11:09 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
188cfd8
Fri 29 Mar 2024 12:14:17 AM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
142819b
Fri 29 Mar 2024 12:17:06 AM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
1822ce9
Fri 29 Mar 2024 12:19:17 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
9422104
Fri 29 Mar 2024 12:20:12 AM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:74:23: error: expected ‘;’ before ‘}’ token
   74 |   return list->current
      |                       ^
      |                       ;
   75 | }
      | ~                      
Compilation failed
ed5bd1c
Fri 29 Mar 2024 12:20:40 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
bbcf49a
Fri 29 Mar 2024 12:21:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
506c92a
Fri 29 Mar 2024 12:22:45 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:80:33: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   80 |   if(list->head == NULL) return 0;
      |                                 ^
list.c:77:6: note: declared here
   77 | void pushFront(List * list, void * data)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
06a1490
Fri 29 Mar 2024 12:23:14 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:80:48: error: expected ‘;’ before ‘nuevoNodo’
   80 |   if(list->head == NULL) nuevoNodo = list->head
      |                                                ^
      |                                                ;
   81 |   nuevoNodo->next = list->head;
      |   ~~~~~~~~~                                     
Compilation failed
b95f7b9
Fri 29 Mar 2024 12:23:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3f6ec4e
Fri 29 Mar 2024 12:25:40 AM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
7bfde47
Fri 29 Mar 2024 12:27:58 AM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
5ddde98
Fri 29 Mar 2024 12:29:16 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
b6b6808
Fri 29 Mar 2024 12:33:37 AM UTC: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 45/70
af7d4b6
Fri 29 Mar 2024 12:34:30 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
b042b21
Fri 29 Mar 2024 12:45:51 AM UTC: 
 list.c | 15 +++------------
 1 file changed, 3 insertions(+), 12 deletions(-)
 tests:  0|0
80f0eb0
Fri 29 Mar 2024 12:50:10 AM UTC: 
 list.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
2e36041
Fri 29 Mar 2024 12:51:06 AM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
663f1e7
Fri 29 Mar 2024 12:53:52 AM UTC: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  11|1
total_score: 55/70
ecd2e35
Fri 29 Mar 2024 12:57:57 AM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
32c5d11
Fri 29 Mar 2024 12:58:07 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
67f54eb
